microservices/infra/k8s/event-bus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: event-bus:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4005

---

apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
  
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - protocol: TCP
      port: 4005
      targetPort: 4005
